--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,45 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Hide app credentials
+#App : Display Hidden App instead to hide mongoDB credentials
 app.js
 
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+#Images folder
+/images
 
-# Node
+# Node Modules
 /node_modules
-npm-debug.log
-yarn-error.log
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
